# job-generator

./: .gitignore  README.md  coverletter.py  data.py  main.py  posting.py  pyproject.toml  requirements.txt  resume.py
docs/uml/: classes.puml  packages.puml
src/: app.py  cli.py  constants.py  main.py
src/core/: chatgpt.py  coverletter.py  posting.py  resume.py  utils.py
src/gui/: __init__.py  applicant_info.py  gui.py  home.py  job_info.py  main.py  options.py  screen.py
templates/: style.css
tests/: test_resume.py
tests/test_data/: data.json  resume.html
