[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "job-generator"
version = "1.0.1"
authors = [
  { name="Tim Hunter", email="thunte27@uwo.ca" },
]
description = "A package to generate jobs for a given set of parameters"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"beautifulsoup4==4.11.2",
"numpy==1.24.2",
"openai==0.27.1",
"pdfkit==1.0.0",
"pyperclip==1.8.2",
"PySimpleGUI==4.60.4",
"python-dotenv==1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/tmhntr/job-generator"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
